@@ -1,5 +1,12 @@
 2005-03-14  Benoît Dejean  <TazForEver@dlfp.org>
 
+	* src/infoview.c:
+	* src/interface.c: (make_title_label):
+	* src/interface.h: Merged multiple make_title_label().
+	Fixed float constants.
+
+2005-03-14  Benoît Dejean  <TazForEver@dlfp.org>
+
 	* src/infoview.c: (infoview_toggle_button_get_msg):
 	* src/infoview.h:
 	* src/interface.c: (create_proc_view), (toggle_infoview):
